--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-parallax": "^3.5.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-typed": "^1.2.0",
     "web-vitals": "^2.1.0"
   },
