--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "react-typed": "^1.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
