--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ronniez0.github.io/ivfusa-website",
+  "homepage": "https://ronniez0.github.io/ivfusa-website",
   "name": "data-finance-yt",
   "version": "0.1.0",
   "private": true,
